a11y: fix heading fonts for legibility

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,7 +11,7 @@ body {
   font-family: var(--main-font);
   background-color: var(--bg-color);
   color: var(--text-color);
-  font-size: var(--font-size);
+  font-size: 1.5em;
   line-height: var(--line-height);
   overflow-y: scroll;
   text-rendering: optimizeLegibility;
@@ -58,19 +58,22 @@ a:focus-visible {
 
 .prose {
   h1 {
-    font-size: 1.15em;
+    font-size: 3rem;
     font-weight: bolder;
-    margin: 1.5em 0 0.75em;
   }
 
   h2 {
-    font-size: 1.1em;
-    margin: 3em 0 1.5em;
+    font-size: 2.5em;
   }
 
-  h3, h4, h5, h6 {
-    font-size: 1em;
-    margin: 2.5em 0 1.5em;
+  h3,
+  h4 {
+    font-size: 2rem;
+  }
+
+  h5,
+  h6 {
+    font-size: 1.5rem;
   }
 
   .zola-anchor {
@@ -91,13 +94,14 @@ a:focus-visible {
   }
 
   p {
-    font-size: 1em;
+    font-size: 1.5rem;
     line-height: inherit;
     word-wrap: break-word;
     margin: 1.5em 0;
   }
 
   a {
+    font-size: 1.5rem;
     border-bottom: 1.5px solid var(--primary-color);
     color: var(--primary-color);
     text-decoration: none;
@@ -182,7 +186,7 @@ a:focus-visible {
 
   :not(pre) > code {
     font-family: var(--code-font);
-    font-size: 0.85em;
+    font-size: 1.5rem;
     padding: 1px 6px;
     color: var(--primary-color);
     background-color: var(--inline-code-bg-color);
@@ -191,7 +195,7 @@ a:focus-visible {
   }
 
   pre {
-    font-size: 0.85em;
+    font-size: 1.5rem;
     margin: 1.25em 0;
     padding: 12px 48px 12px 16px;
     line-height: 1.5;
